[gd_scene load_steps=19 format=3 uid="uid://ck2541i45duru"]

[ext_resource type="PackedScene" uid="uid://d2wt5n12rfam" path="res://combat/laser/laser.tscn" id="1_dvnqk"]
[ext_resource type="Script" path="res://combat/combat.gd" id="1_npvr5"]
[ext_resource type="Texture2D" uid="uid://1mqkiv64f08b" path="res://combat/combat_background.png" id="2_k3uv0"]
[ext_resource type="Script" path="res://combat/enemy/enemy.gd" id="3_1bgdu"]
[ext_resource type="Texture2D" uid="uid://b0xjckorhdlei" path="res://overworld/encounter/mutant1.png" id="4_fikq3"]
[ext_resource type="Texture2D" uid="uid://opfqa6ickmd0" path="res://combat/arena_background.png" id="4_gsscs"]
[ext_resource type="Script" path="res://cheat/bite_mode/bite_buffer.gd" id="6_s4gui"]
[ext_resource type="Script" path="res://game/bgm/BGM_Load.gd" id="8_s33d5"]
[ext_resource type="AudioStream" uid="uid://cmeqt0hd72clv" path="res://game/bgm/PixelPunch_By_Dk.wav" id="9_dj5up"]
[ext_resource type="AudioStream" uid="uid://bapl7s41vr2nw" path="res://combat/hit.wav" id="10_mnyim"]

[sub_resource type="Resource" id="Resource_kumwe"]
script = ExtResource("3_1bgdu")
name = "Kitty McCatface"
is_mafia = false
bg_color = Color(0.152941, 0.164706, 0.188235, 1)
bg_overlay_color = Color(0.121569, 0.133333, 0.160784, 1)
max_exhaustion = 20.0
exhaustion_cooldown = 0.5
max_suspicion = 8.0
attack_phases = Array[Resource("res://combat/phase/attack_phase.gd")]([])

[sub_resource type="Gradient" id="Gradient_sdbt7"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_56ekf"]
gradient = SubResource("Gradient_sdbt7")
width = 320

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rlbjm"]
size = Vector2(166, 86)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oirq6"]
size = Vector2(320, 20)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bvnln"]
bg_color = Color(1, 1, 1, 0)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ms1of"]
bg_color = Color(0.105882, 0.282353, 0.658824, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_arqxh"]
bg_color = Color(0.729412, 0.145098, 0.309804, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)

[node name="Combat" type="Node2D"]
script = ExtResource("1_npvr5")
enemy = SubResource("Resource_kumwe")

[node name="Background" type="Sprite2D" parent="."]
self_modulate = Color(0.152941, 0.164706, 0.188235, 1)
scale = Vector2(1, 180)
texture = SubResource("GradientTexture1D_56ekf")

[node name="BackgroundOverlay" type="Sprite2D" parent="."]
self_modulate = Color(0.121569, 0.133333, 0.160784, 1)
texture_repeat = 2
texture = ExtResource("2_k3uv0")
region_enabled = true
region_rect = Rect2(0, 0, 320, 180)

[node name="EnemyPortrait" type="TextureRect" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -16.0
offset_top = -54.0
offset_right = 16.0
offset_bottom = -22.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("4_fikq3")

[node name="Arena" type="Area2D" parent="."]
position = Vector2(0, 38)

[node name="Background" type="Sprite2D" parent="Arena"]
texture = ExtResource("4_gsscs")

[node name="Bounds" type="CollisionShape2D" parent="Arena"]
shape = SubResource("RectangleShape2D_rlbjm")

[node name="Floor" type="StaticBody2D" parent="."]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
position = Vector2(0, 100)
shape = SubResource("RectangleShape2D_oirq6")

[node name="Hud" type="Control" parent="."]
modulate = Color(0.882353, 0.870588, 0.905882, 1)
layout_mode = 3
anchors_preset = 0

[node name="EnemyName" type="Label" parent="Hud"]
visible = false
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -35.0
offset_top = -88.0
offset_right = 40.0
offset_bottom = -75.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 8
text = "Enemy Name"
horizontal_alignment = 1

[node name="ExhSus" type="Control" parent="Hud"]
layout_mode = 3
anchors_preset = 0
offset_left = -107.0
offset_top = -23.0
offset_right = -67.0
offset_bottom = 17.0

[node name="ExhLabel" type="Label" parent="Hud/ExhSus"]
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 25.0
offset_bottom = 14.0
theme_override_font_sizes/font_size = 8
text = "exh"
horizontal_alignment = 2

[node name="ExhSusMeter" type="HBoxContainer" parent="Hud/ExhSus"]
layout_mode = 0
offset_left = 25.0
offset_top = 6.0
offset_right = 189.0
offset_bottom = 11.0
theme_override_constants/separation = -1

[node name="ExhMeter" type="ProgressBar" parent="Hud/ExhSus/ExhSusMeter"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_styles/background = SubResource("StyleBoxFlat_bvnln")
theme_override_styles/fill = SubResource("StyleBoxFlat_ms1of")
step = 0.0
show_percentage = false

[node name="SusMeter" type="ProgressBar" parent="Hud/ExhSus/ExhSusMeter"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_styles/background = SubResource("StyleBoxFlat_bvnln")
theme_override_styles/fill = SubResource("StyleBoxFlat_arqxh")
step = 0.0
fill_mode = 1
show_percentage = false

[node name="SusLabel" type="Label" parent="Hud/ExhSus"]
layout_mode = 0
offset_left = 191.0
offset_top = 1.0
offset_right = 215.0
offset_bottom = 14.0
theme_override_font_sizes/font_size = 8
text = "sus"

[node name="Inventory" type="HBoxContainer" parent="Hud"]
layout_mode = 2
offset_left = -136.0
offset_top = -29.0
offset_right = 136.0
offset_bottom = 77.0
theme_override_constants/separation = 228

[node name="InventoryL" type="VBoxContainer" parent="Hud/Inventory"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = -1

[node name="InventoryR" type="VBoxContainer" parent="Hud/Inventory"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = -1

[node name="BiteBuffer" type="VBoxContainer" parent="Hud"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 84.0
offset_top = -79.0
offset_right = 151.0
offset_bottom = 102.0
grow_horizontal = 0
script = ExtResource("6_s4gui")

[node name="Projectiles" type="Node2D" parent="."]

[node name="Laser" parent="." instance=ExtResource("1_dvnqk")]
unique_name_in_owner = true

[node name="Camera2D" type="Camera2D" parent="."]

[node name="ExhaustionTimer" type="Timer" parent="."]

[node name="BGM_Load" type="Node" parent="."]
script = ExtResource("8_s33d5")
music = ExtResource("9_dj5up")
crossfade = 0.1
reset_on_end = true

[node name="hitSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_mnyim")

[connection signal="player_damaged" from="." to="Hud/BiteBuffer" method="_on_combat_player_damaged"]
[connection signal="player_damaged" from="." to="hitSFX" method="play"]
[connection signal="got_hit" from="Laser" to="." method="_on_laser_got_hit"]
[connection signal="timeout" from="ExhaustionTimer" to="." method="_on_exhaustion_timer_timeout"]
